# claude-code-statusline

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install-remote.sh  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml
benchmarks/: README.md  RESULTS.md  bench.sh  generate-report.sh  profile-bash.sh
docs/: go-engine-insights.md  performance-journey.md
engines/bash/: cumulative-stats.sh  statusline.env.default  statusline.sh
engines/go/: Makefile  README.md  go.mod  go.sum
engines/go/cmd/statusline/: main.go
engines/go/internal/background/: background.go
engines/go/internal/cache/: cache.go  cache_test.go
engines/go/internal/config/: config.go  config_test.go
engines/python/: README.md  pyproject.toml  statusline.py
engines/rust/: Cargo.toml  README.md
engines/rust/src/: background.rs  cache.rs  config.rs  format.rs  git.rs  main.rs  render.rs  session.rs
scripts/: ansi2svg.py  generate-demo.sh
skill/: SKILL.md
src/: cumulative-stats.sh  statusline.env.default  statusline.sh
tests/: run-tests.sh  test-engine.sh  test-git-integration.sh  test-parity.sh  test_python_unit.py
tests/fixtures/: basic-session.json  cheap-session.json  critical-context.json  cumulative-all.json  cumulative-proj.json  expensive-session.json  extreme-tokens.json  high-context.json  long-branch.json  minimal.json  models-cache.json  zero-session.json
(+8 files in other folders)
