[package]
name = "statusline"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gix = { version = "0.70", default-features = false, features = [
    "status", "dirwalk", "revision", "index",
    "attributes", "parallel", "pack-cache-lru-static",
    "max-performance-safe"
] }
md-5 = "0.10"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
